--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/**/*.test.js"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
